--- a/PRN221_Project/ArtTattooProject/Pages/AdminPage/StyleManage/Index.cshtml
+++ b/PRN221_Project/ArtTattooProject/Pages/AdminPage/StyleManage/Index.cshtml
@@ -5,51 +5,62 @@
     ViewData["Title"] = "Style Manage";
 }
 
-<h1>Style Manage</h1>
+<div class="container">
+    <div class="container-fluid p-0">
+        <h1 class="h1">Style Manage</h1>
+        <p>
+            <a asp-page="Create" class="btn btn-primary badge bg-success">Create New</a>
+        </p>
+        <table class="table">
+            <thead>
+                <tr>
+                    <th class="table-header">
+                        @Html.DisplayNameFor(model => model.Style[0].Style.StyleName)
+                    </th>
+                    <th class="table-header">
+                        Number of design
+                    </th>
+                    <th class="table-header"></th>
+                </tr>
+            </thead>
+            <tbody>
+                @foreach (var item in Model.Style)
+                {
+                    <tr>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Style.StyleName)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Count)
+                        </td>
+                        <td>
+                            <a asp-page="./Edit" asp-route-id="@item.Style.StyleId" class="btn btn-success btn-xs">
+                                Edit
+                            </a>
+                        </td>
+                    </tr>
+                }
+            </tbody>
+        </table>
+        @{
+            var prevDisabled = !Model.Style.HasPreviousPage ? "disabled" : "";
+            var nextDisabled = !Model.Style.HasNextPage ? "disabled" : "";
+        }
+        <a asp-page="./Index"
+           asp-route-pageIndex="@(Model.Style.PageIndex - 1)"
+           class="btn btn-primary @prevDisabled">
+            Previous
+        </a>
+        <a asp-page="./Index"
+           asp-route-pageIndex="@(Model.Style.PageIndex + 1)"
+           class="btn btn-primary @nextDisabled">
+            Next
+        </a>
+    </div>
+</div>
 
-<p>
-    <a asp-page="Create">Create New</a>
-</p>
-<table class="table">
-    <thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.Style[0].Style.StyleName)
-            </th>
-            <th>
-                Number of deisgn 
-            </th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-@foreach (var item in Model.Style) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Style.StyleName)
-            </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Count)
-                </td>
-            <td>
-                <a asp-page="./Edit" asp-route-id="@item.Style.StyleId">Edit</a>
-            </td>
-        </tr>
-}
-    </tbody>
-</table>
-@{
-    var prevDisabled = !Model.Style.HasPreviousPage ? "disabled" : "";
-    var nextDisabled = !Model.Style.HasNextPage ? "disabled" : "";
-}
-
-<a asp-page="./Index"
-   asp-route-pageIndex="@(Model.Style.PageIndex - 1)"
-   class="btn btn-primary @prevDisabled">
-    Previous
-</a>
-<a asp-page="./Index"
-   asp-route-pageIndex="@(Model.Style.PageIndex + 1)"
-   class="btn btn-primary @nextDisabled">
-    Next
-</a>
+<style>
+    a {
+        text-decoration: none;
+    }
+</style>
