--- a/PRN221_Project/ArtTattooProject/Pages/LoginPage.cshtml
+++ b/PRN221_Project/ArtTattooProject/Pages/LoginPage.cshtml
@@ -4,25 +4,38 @@
     ViewData["Title"] = "Home page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <form method="post" asp-page="Index">
-        <table>
-            <tr>
-                <td>Username</td>
-                <td><input type="text" asp-for="@Model.Username" /></td>
-            </tr>
-            <tr>
-                <td>Password</td>
-                <td><input type="password" asp-for="@Model.Password" /></td>
-            </tr>
-            <tr>
-                <td>&nbsp;</td>
-                <td><input type="submit" value="Login" /></td>
-            </tr>
-        </table>
-    </form>
-    @Model.Msg
-</div>
-<div>Not have account yet? <a asp-page="SignUp"> Sign up</a></div>
+<section class="vh-70">
+    <div class="container-fluid h-custom">
+        <div class="row d-flex justify-content-center align-items-center h-100">
+            <div class="col-md-9 col-lg-6 col-xl-5">
+                <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-login-form/draw2.webp"
+                     class="img-fluid" alt="Sample image">
+            </div>
+            <div class="col-md-8 col-lg-6 col-xl-4 offset-xl-1">
+                <form method="post" asp-page="Index">
+                    <div class="d-flex flex-row align-items-center justify-content-center justify-content-lg-start">
+                        <p class="lead fw-normal mb-0 me-3" style="font-size: 40px; font-weight: bold;">Sign in</p>
+                    </div>
 
+                    <!-- Username input -->
+                    <div class="form-outline mb-4">
+                        <label class="form-label" for="form3Example3">Username</label>
+                        <input type="text" id="form3Example3" class="form-control form-control-lg" asp-for="@Model.Username" />
+                    </div>
+
+                    <!-- Password input -->
+                    <div class="form-outline mb-3">
+                        <label class="form-label" for="form3Example4">Password</label>
+                        <input type="password" id="form3Example4" class="form-control form-control-lg" asp-for="@Model.Password" />
+                    </div>
+
+                    <div class="text-center text-lg-start mt-4 pt-2">
+                        <button type="submit" class="btn btn-primary btn-lg" style="padding-left: 2.5rem; padding-right: 2.5rem;">Login</button>
+                        <p class="small fw-bold mt-2 pt-1 mb-0">Don't have an account? <a asp-page="SignUp"> Sign up</a></p>
+                    </div>
+                </form>
+                <div class="text-danger">@Model.Msg</div>
+            </div>
+        </div>
+    </div>
+</section>
