--- a/PRN221_Project/ArtTattooProject/Pages/StaffPage/AppointmentManage/Index.cshtml
+++ b/PRN221_Project/ArtTattooProject/Pages/StaffPage/AppointmentManage/Index.cshtml
@@ -2,87 +2,93 @@
 @model ArtTattooProject.Pages.StaffPage.AppointmentManage.IndexModel
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Appointment Manage";
 }
 
-<h1>Index</h1>
+<div class="container">
+    <div class="container-fluid p-0">
+        <h1 class="h3 mb-3">Appointment Manage</h1>
+        <table class="table">
+            <thead>
+                <tr>
+                    <th>
+                        @Html.DisplayNameFor(model => model.Appointment[0].AppointmentId)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.Appointment[0].TotalPrice)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.Appointment[0].Status)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.Appointment[0].TattooLover)
+                    </th>
+                    <th></th>
+                </tr>
+            </thead>
+            <tbody>
+                @foreach (var item in Model.Appointment)
+                {
+                    <tr>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.AppointmentId)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.TotalPrice)
+                        </td>
+                        <td>
+                            @if (item.Status == 1)
+                            {
+                                <div class="badge bg-warning">waiting</div>
+                            }
+                            else if (item.Status == 2)
+                            {
+                                <div class="badge bg-primary">on going</div>
+                            }
+                            else if (item.Status == 3)
+                            {
+                                <div class="badge bg-success">done</div>
+                            }
+                            else if (item.Status == 4)
+                            {
+                                <div class="badge bg-danger">cancelled</div>
+                            }
+                            else if (item.Status == 5)
+                            {
+                                <div class="badge bg-info">paid</div>
+                            }
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.TattooLover.Email)
+                        </td>
+                        <td>
+                            <a asp-page="./Edit" asp-route-id="@item.AppointmentId" class="btn btn-success btn-xs">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-pen" viewBox="0 0 16 16">
+                                    <path d="m13.498.795.149-.149a1.207 1.207 0 1 1 1.707 1.708l-.149.148a1.5 1.5 0 0 1-.059 2.059L4.854 14.854a.5.5 0 0 1-.233.131l-4 1a.5.5 0 0 1-.606-.606l1-4a.5.5 0 0 1 .131-.232l9.642-9.642a.5.5 0 0 0-.642.056L6.854 4.854a.5.5 0 1 1-.708-.708L9.44.854A1.5 1.5 0 0 1 11.5.796a1.5 1.5 0 0 1 1.998-.001zm-.644.766a.5.5 0 0 0-.707 0L1.95 11.756l-.764 3.057 3.057-.764L14.44 3.854a.5.5 0 0 0 0-.708l-1.585-1.585z" />
+                                </svg>
+                                Update Status
+                            </a>
+                            <a asp-page="./Details" asp-route-id="@item.AppointmentId" class="btn btn-info btn-xs">Details</a>
+                        </td>
+                    </tr>
+                }
+            </tbody>
+        </table>
 
-<table class="table">
-    <thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.Appointment[0].AppointmentId)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Appointment[0].TotalPrice)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Appointment[0].Status)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Appointment[0].TattooLover)
-            </th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-        @foreach (var item in Model.Appointment)
-        {
-            <tr>
-                <td>
-                    @Html.DisplayFor(modelItem => item.AppointmentId)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.TotalPrice)
-                </td>
-                <td>
-                    @if (item.Status == 1)
-                    {
-                        <div>waiting</div>
-                    }
-                    else if (item.Status == 2)
-                    {
-                        <div>on going</div>
-                    }
-                    else if (item.Status == 3)
-                    {
-                        <div>done</div>
-                    }
-                    else
-                    if (item.Status == 4)
-                    {
-                        <div>cancelled</div>
-                    }
-                    else
-                    if (item.Status == 5)
-                    {
-                        <div>paid</div>
-                    }
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.TattooLover.Email)
-                </td>
-                <td>
-                    <a asp-page="./Edit" asp-route-id="@item.AppointmentId">update status</a> |
-                    <a asp-page="./Details" asp-route-id="@item.AppointmentId">Details</a>
-                </td>
-            </tr>
+        @{
+            var prevDisabled = !Model.Appointment.HasPreviousPage ? "disabled" : "";
+            var nextDisabled = !Model.Appointment.HasNextPage ? "disabled" : "";
         }
-    </tbody>
-</table>
 
-@{
-    var prevDisabled = !Model.Appointment.HasPreviousPage ? "disabled" : "";
-    var nextDisabled = !Model.Appointment.HasNextPage ? "disabled" : "";
-}
-
-<a asp-page="./Index"
-   asp-route-pageIndex="@(Model.Appointment.PageIndex - 1)"
-   class="btn btn-primary @prevDisabled">
-    Previous
-</a>
-<a asp-page="./Index"
-   asp-route-pageIndex="@(Model.Appointment.PageIndex + 1)"
-   class="btn btn-primary @nextDisabled">
-    Next
-</a>
+        <a asp-page="./Index"
+           asp-route-pageIndex="@(Model.Appointment.PageIndex - 1)"
+           class="btn btn-primary @prevDisabled">
+            Previous
+        </a>
+        <a asp-page="./Index"
+           asp-route-pageIndex="@(Model.Appointment.PageIndex + 1)"
+           class="btn btn-primary @nextDisabled">
+            Next
+        </a>
+    </div>
+</div>
