--- a/PRN221_Project/ArtTattooProject/Pages/TattooLoverPage/AppointmentDetails.cshtml
+++ b/PRN221_Project/ArtTattooProject/Pages/TattooLoverPage/AppointmentDetails.cshtml
@@ -35,7 +35,7 @@
             </tr>
         }
         <tr>
-            <td colspan="6" align="right">Total</td>
+            <td colspan="6" align="right"><strong>Total</strong></td>
             <td align="center">$@Model.totalPrice</td>
         </tr>
     </tbody>
