--- a/PRN221_Project/ArtTattooProject/Pages/AdminPage/StudioManage/Create.cshtml
+++ b/PRN221_Project/ArtTattooProject/Pages/AdminPage/StudioManage/Create.cshtml
@@ -33,7 +33,7 @@
                 <input asp-for="Studio.Website" class="form-control" />
                 <span asp-validation-for="Studio.Website" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            <div class="form-group small fw-bold mt-2 pt-1 mb-0">
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
         </form>
@@ -42,7 +42,7 @@
 </div>
 
 <div>
-    <a asp-page="Index">Back</a>
+    <a class="small fw-bold mt-2 pt-1 mb-0" asp-page="Index">Back to List</a>
 </div>
 
 @section Scripts {
