--- a/PRN221_Project/ArtTattooProject/Pages/AdminPage/StudioManage/Delete.cshtml
+++ b/PRN221_Project/ArtTattooProject/Pages/AdminPage/StudioManage/Delete.cshtml
@@ -42,11 +42,11 @@
         <input type="hidden" asp-for="Studio.StudioId" />
         @if (Model.Studio.Status == 1)
         {
-            <input type="submit" value="Inactive" />
+            <input class="btn btn-warning btn-xs" type="submit" value="Inactive" />
         }
         else
         {
-            <input type="submit" value="Active" />
+            <input class="btn btn-success btn-xs" type="submit" value="Active" />
         }
         <a asp-page="./Index">Back</a>
     </form>
