--- a/PRN221_Project/ArtTattooProject/Pages/StaffPage/AppointmentManage/Edit.cshtml
+++ b/PRN221_Project/ArtTattooProject/Pages/StaffPage/AppointmentManage/Edit.cshtml
@@ -34,7 +34,7 @@
             <div class="form-group">
                 <input type="hidden" asp-for="Appointment.StudioId" class="form-control">
             </div>
-            <div class="form-group">
+            <div class="form-group small fw-bold mt-2 pt-1 mb-0">
                 <input type="submit" value="Save" class="btn btn-primary" />
             </div>
         </form>
@@ -43,7 +43,7 @@
 </div>
 
 <div>
-    <a asp-page="./Index">Back</a>
+    <a class="small fw-bold mt-2 pt-1 mb-0" asp-page="./Index">Back</a>
 </div>
 
 @section Scripts {
