--- a/PRN221_Project/ArtTattooProject/Pages/StaffPage/ArtistManage/Index.cshtml
+++ b/PRN221_Project/ArtTattooProject/Pages/StaffPage/ArtistManage/Index.cshtml
@@ -2,61 +2,63 @@
 @model ArtTattooProject.Pages.StaffPage.ArtistManage.IndexModel
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Artist Manage";
 }
 
-<h1>Artist</h1>
+<div class="container">
+    <div class="container-fluid p-0">
+        <h1 class="h3 mb-3">Artist Manage</h1>
+        <p>
+            <a asp-page="Create" class="btn btn-primary badge bg-success">Add New Artist</a>
+        </p>
+        <table class="table">
+            <thead>
+                <tr>
+                    <th>
+                        @Html.DisplayNameFor(model => model.Artist[0].Fullname)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.Artist[0].Phone)
+                    </th>
+                    <th></th>
+                </tr>
+            </thead>
+            <tbody>
+                @foreach (var item in Model.Artist)
+                {
+                    <tr>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Fullname)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Phone)
+                        </td>
+                        <td>
+                            <a asp-page="./Details" asp-route-id="@item.ArtistId">
+                                <button type="button" class="btn btn-info btn-xs">Details <span class="glyphicon glyphicon-edit"></span></button></a>
+                            <a asp-page="./Delete" asp-route-id="@item.ArtistId">
+                                <button type="button" class="btn btn-danger btn-xs">Delete <span class="glyphicon glyphicon-edit"></span></button>
+                            </a>
+                        </td>
+                    </tr>
+                }
+            </tbody>
+        </table>
 
-<p>
-    <a asp-page="Create">Add New artist</a>
-</p>
-<table class="table">
-    <thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.Artist[0].Fullname)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Artist[0].Phone)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Artist[0].Studio)
-            </th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-@foreach (var item in Model.Artist) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Fullname)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Phone)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Studio.StudioId)
-            </td>
-            <td>
-                <a asp-page="./Details" asp-route-id="@item.ArtistId">Details</a> |
-                <a asp-page="./Delete" asp-route-id="@item.ArtistId">Delete</a>
-            </td>
-        </tr>
-}
-    </tbody>
-</table>
-@{
-    var prevDisabled = !Model.Artist.HasPreviousPage ? "disabled" : "";
-    var nextDisabled = !Model.Artist.HasNextPage ? "disabled" : "";
-}
+        @{
+            var prevDisabled = !Model.Artist.HasPreviousPage ? "disabled" : "";
+            var nextDisabled = !Model.Artist.HasNextPage ? "disabled" : "";
+        }
 
-<a asp-page="./Index"
-   asp-route-pageIndex="@(Model.Artist.PageIndex - 1)"
-   class="btn btn-primary @prevDisabled">
-    Previous
-</a>
-<a asp-page="./Index"
-   asp-route-pageIndex="@(Model.Artist.PageIndex + 1)"
-   class="btn btn-primary @nextDisabled">
-    Next
-</a>
+        <a asp-page="./Index"
+           asp-route-pageIndex="@(Model.Artist.PageIndex - 1)"
+           class="btn btn-primary @prevDisabled">
+            Previous
+        </a>
+        <a asp-page="./Index"
+           asp-route-pageIndex="@(Model.Artist.PageIndex + 1)"
+           class="btn btn-primary @nextDisabled">
+            Next
+        </a>
+    </div>
+</div>
